@@ -6,11 +6,12 @@
 #include "ace/OS_NS_unistd.h"
 
 const ACE_TCHAR *ior = ACE_TEXT("file://Messenger.ior");
+int seconds_between_requests = 4;
 
 int
 parse_args (int argc, ACE_TCHAR *argv[])
 {
-  ACE_Get_Opt get_opts (argc, argv, ACE_TEXT("k:"));
+  ACE_Get_Opt get_opts (argc, argv, ACE_TEXT("k:d:"));
   int c;
 
   while ((c = get_opts ()) != -1)
@@ -20,11 +21,16 @@ parse_args (int argc, ACE_TCHAR *argv[])
         ior = get_opts.opt_arg ();
         break;
 
+      case 'd':
+        seconds_between_requests = ACE_OS::atoi (get_opts.opt_arg ());
+        break;
+
       case '?':
       default:
         ACE_ERROR_RETURN ((LM_ERROR,
                            "usage:  %s "
                            "-k <ior> "
+                           "-d <seconds> (Delay between requests) "
                            "\n",
                            argv [0]),
                           -1);
@@ -70,7 +76,7 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
     // Force server to abort to verify it will be brought
     // back up when send_message() is called.
     messenger->abort(2);
-    ACE_OS::sleep(4);
+    ACE_OS::sleep(seconds_between_requests);
 
     ACE_DEBUG ((LM_INFO,
                 "(%P|%t) - Sending another message after abort of server\n"));
